add date to 2.5.3-beta.1 release

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -16,7 +16,7 @@ import { discord, github } from "../links";
 
 # Chatterino Changelog
 
-## 2.5.3 beta 1 (Released TBD) {#2.5.3}
+## 2.5.3 beta 1 (Released 2025-03-18) {#2.5.3}
 
 ### Twitch EventSub support {#2.5.3-eventsub}
 
