Include 2 new "text color" fixes for dialogs

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -211,7 +211,7 @@ your distro already runs something).
 
 - Fixed search in emote popup not always working correctly. <Credit author="Nerixyz" prs="5946" inline />
 
-- Fixed some text inputs being dark in light themes. <Credit author="pajlada" prs="6055" inline />
+- Fixed some text inputs being dark in light themes. <Credit author="pajlada" helper="Nerixyz" prs="6055, 6096, 6098" inline />
 
 - Fixed channel point redemptions with messages not showing up if PubSub is disconnected. <Credit author="Nerixyz" prs="5948" inline />
 
