Promote "delete message" to its own big entry

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -145,6 +145,20 @@ your distro already runs something).
 
 </div>
 
+### Right-click to delete message {#2.5.3-right-click-delete-message}
+
+<div className="changelog-entry">
+
+As a moderator, you can now delete messages by right-clicking them.
+
+<Figure src="./changelog/2.5.3/delete-message-menu.png" width="552">
+  Delete MOSSCODE's message 🦀
+</Figure>
+
+<Credit author="Nerixyz" helper="pajlada" prs="5956, 6100" />
+
+</div>
+
 ### Miscellaneous changes {#2.5.3-miscellaneous-changes}
 
 <div className="changelog-entry">
@@ -172,8 +186,6 @@ your distro already runs something).
 - Added the ability to filter on messages by the author's user ID. <Credit author="apa420" prs="5862" inline />
 
   Example filter: `author.user_id == "22484632"`
-
-- Messages can now be deleted by right-clicking them. <Credit author="Nerixyz" prs="5956" inline />
 
 - Messages from restricted users are now hidden in streamer mode. <Credit author="pajlada" prs="6042, 6049" inline />
 
