changelog entry for shared chat badge

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -159,6 +159,21 @@ As a moderator, you can now delete messages by right-clicking them.
 
 </div>
 
+### Shared chat badges {#2.5.3-shared-chat-badges}
+
+<div className="changelog-entry">
+
+Shared chat messages now use the source streamer's profile picture instead of
+a generic badge when possible.
+
+<Figure src="./changelog/2.5.3/shared-chat-badge.png" width="268">
+  Message from waterlynn in hello_kiko's channel
+</Figure>
+
+<Credit author="treuks" helper="pajlada, Nerixyz" prs="5760" />
+
+</div>
+
 ### Miscellaneous changes {#2.5.3-miscellaneous-changes}
 
 <div className="changelog-entry">
