add macos r9k binding fix

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -254,6 +254,10 @@ a generic badge when possible.
 
 - Fixed a potential way to escape the Lua Plugin sandbox. <Credit author="Mm2pl" prs="5846" inline />
 
+- Don't set default binding for "Toggle local R9K" on macOS. <Credit author="jacob-thompson" helper="pajlada" prs="5764" inline />
+
+  Was <kbd>CTRL</kbd> + <kdb>H</kdb> before, which clashes with a system binding.
+
 </div>
 
 ### Nerdier things {#2.5.3-nerd-things}
