reword linux desktop notifications

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -138,8 +138,8 @@ You can now make your tabs a bit more compact with tab styles
 
 We now support desktop notifications on Linux using
 [libnotify](https://gitlab.gnome.org/GNOME/libnotify). This requires
-you to be running a desktop notification daemon like [dunst](https://dunst-project.org/) (or more likely,
-your distro already runs something).
+you to be running a desktop notification daemon. You probably already have one
+installed, if not you can install and run [dunst](https://dunst-project.org/).
 
 <Credit author="camporter, 4rneee" prs="5881, 5971, 5976" />
 
