reword right-click to delete message

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -149,7 +149,8 @@ installed, if not you can install and run [dunst](https://dunst-project.org/).
 
 <div className="changelog-entry">
 
-As a moderator, you can now delete messages by right-clicking them.
+As a moderator, there's now an option to delete the message in the menu when you
+right-click it.
 
 <Figure src="./changelog/2.5.3/delete-message-menu.png" width="552">
   Delete MOSSCODE's message 🦀
