reword shared chat image caption

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -168,7 +168,7 @@ Shared chat messages now use the source streamer's profile picture instead of
 a generic badge when possible.
 
 <Figure src="./changelog/2.5.3/shared-chat-badge.png" width="268">
-  Message from waterlynn in hello_kiko's channel
+  Shared chat message from waterlynn's channel
 </Figure>
 
 <Credit author="treuks" helper="pajlada, Nerixyz" prs="5760" />
