fix changelog entry credit for #5880

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -189,7 +189,7 @@ a generic badge when possible.
 
 - Improved error messaging of the `/clip` command. <Credit author="pajlada" prs="5879" inline />
 
-- Clicking on a live notification can now open the channel in a custom player. (#5880)
+- Clicking on a live notification can now open the channel in a custom player. <Credit author="Nerixyz" prs="5880" inline />
 
 - Hotkeys and their keybinds are now searchable. <Credit author="apa420" prs="5884" inline />
 
