add entry for 6107

--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -259,6 +259,8 @@ a generic badge when possible.
 
   Was <kbd>CTRL</kbd> + <kdb>H</kdb> before, which clashes with a system binding.
 
+- Moderation buttons are no longer shown on your own usercard. <Credit author="Jujufrost" prs="6107" inline />
+
 </div>
 
 ### Nerdier things {#2.5.3-nerd-things}
