--- a/pages/changelog.mdx
+++ b/pages/changelog.mdx
@@ -16,7 +16,7 @@ import { discord, github } from "../links";
 
 # Chatterino Changelog
 
-## 2.5.4 (Beta 1, Not yet released) {#2.5.4}
+## 2.5.4 beta 1 (Released TBD) {#2.5.4}
 
 ### Usercards {#2.5.4-usercards}
 
